<?xml version="1.0"?>
<package format="2">
  <name>raspberry_pi_button</name>
  <version>1.0.0</version>
  <description>A ROS package to interface a button to a ROS topics using a Raspberry Pi GPIO</description>

  <maintainer email="r-baran@hotmail.fr">Robin Baran</maintainer>
  <author email="r-baran@hotmail.fr">Robin Baran</author>
  <license>MIT</license>
  <url type="website">https://github.com/RBinsonB/ros_raspberry_pi_button</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
